# cagqsar

./: .gitignore  LICENSE  QSAR_test_file_Bace1_same_lab.csv  README.md  install.sh  pyproject.toml  report.docx
.github/workflows/: python-app.yml
cagqsar/: __init__.py  pipeline.py
qsar_output_gnn/: cleaned_dataset.csv  qsar_model_gnn.pkl  qsar_report_gnn.txt
qsar_output_pls/: cleaned_dataset.csv  qsar_model_pls.pkl  qsar_report_pls.txt
qsar_output_rf/: cleaned_dataset.csv  qsar_report_rf.txt
qsar_output_xgb/: cleaned_dataset.csv  qsar_model_xgb.pkl  qsar_report_xgb.txt
tests/: test_qsar.py
